# Stellar-K8s

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLEANUP_STATUS.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DELIVERY_SUMMARY.md  DEVELOPMENT.md  DISABLED_FEATURES.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_CHECKLIST.md  Issues.md  Makefile  PEER_DISCOVERY_IMPLEMENTATION.md  PEER_DISCOVERY_QUICKSTART.md  PROMETHEUS-ALERTS-TODO.md  PR_MESSAGE.md  README.md  SECURITY.md  TEMPORARY_FIXES.md  THIRD_PARTY_LICENSES.md  TODO.md  Tiltfile  build.rs  bundle.Dockerfile  cliff.toml  doc-coverage.toml  index.html  issue.md  issues.md  krew-plugin.yaml  lychee.toml  mkdocs.yml  mlc_config.json  rust-toolchain.toml  sitemap.xml  (+1 more)
.cargo/: audit.toml
.github/: CI_COMMANDS.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  kind-config.yaml
EDGE_CASES/: index.html
FORMAL_VERIFICATION/: index.html
PQC_READINESS/: index.html
PRUNING_CHECKLIST/: index.html
PRUNING_COMPLETE/: index.html
PRUNING_EXECUTIVE_SUMMARY/: index.html
PRUNING_FILE_MANIFEST/: index.html
PRUNING_IMPLEMENTATION/: index.html
PRUNING_INDEX/: index.html
PRUNING_INTEGRATION_GUIDE/: index.html
PRUNING_QUICK_REFERENCE/: index.html
QUICK_START_HEALTH_CHECKS/: index.html
QUICK_START_PEER_DISCOVERY/: index.html
SCHEDULER_PROXIMITY_BENCHMARK/: index.html
SECURITY_TESTING/: index.html
WEBHOOK_BENCHMARK_SUMMARY/: index.html
_branding/: index.html
adr/: index.html
api/: index.html
ebpf/stellar-ebpf/: Cargo.toml
ebpf/stellar-ebpf/src/: main.rs
(+653 files in other folders)
